// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeSlider /> Snapshots should match the snapshot when <RangeSlider /> is disabled 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root WithStyles(ForwardRef(Slider))-root-25 MuiSlider-colorPrimary Mui-disabled"
  >
    <span
      class="MuiSlider-rail WithStyles(ForwardRef(Slider))-rail-31"
    />
    <span
      class="MuiSlider-track WithStyles(ForwardRef(Slider))-track-30"
      style="left: 0%; width: 0%;"
    />
    <input
      type="hidden"
      value="0"
    />
    <span
      aria-label="0"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0"
      class="MuiSlider-thumb WithStyles(ForwardRef(Slider))-thumb-26 MuiSlider-thumbColorPrimary Mui-disabled"
      data-index="0"
      role="slider"
      style="left: 0%;"
    />
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when <RangeSlider /> label is on 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root WithStyles(ForwardRef(Slider))-root-37 MuiSlider-colorPrimary"
  >
    <span
      class="MuiSlider-rail WithStyles(ForwardRef(Slider))-rail-43"
    />
    <span
      class="MuiSlider-track WithStyles(ForwardRef(Slider))-track-42"
      style="left: 0%; width: 30%;"
    />
    <input
      type="hidden"
      value="30"
    />
    <span
      aria-label="0"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      aria-valuetext="30"
      class="MuiSlider-thumb WithStyles(ForwardRef(Slider))-thumb-38 MuiSlider-thumbColorPrimary PrivateValueLabel-open-45 PrivateValueLabel-thumb-44"
      data-index="0"
      role="slider"
      style="left: 30%;"
      tabindex="0"
    >
      <span
        class="PrivateValueLabel-offset-46 MuiSlider-valueLabel WithStyles(ForwardRef(Slider))-valueLabel-39"
      >
        <span
          class="PrivateValueLabel-circle-47"
        >
          <span
            class="PrivateValueLabel-label-48"
          >
            30
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have just one handle 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root WithStyles(ForwardRef(Slider))-root-1 MuiSlider-colorPrimary"
  >
    <span
      class="MuiSlider-rail WithStyles(ForwardRef(Slider))-rail-7"
    />
    <span
      class="MuiSlider-track WithStyles(ForwardRef(Slider))-track-6"
      style="left: 0%; width: 10%;"
    />
    <input
      type="hidden"
      value="10"
    />
    <span
      aria-label="0"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="10"
      aria-valuetext="10"
      class="MuiSlider-thumb WithStyles(ForwardRef(Slider))-thumb-2 MuiSlider-thumbColorPrimary PrivateValueLabel-thumb-8"
      data-index="0"
      role="slider"
      style="left: 10%;"
      tabindex="0"
    >
      <span
        class="PrivateValueLabel-offset-10 MuiSlider-valueLabel WithStyles(ForwardRef(Slider))-valueLabel-3"
      >
        <span
          class="PrivateValueLabel-circle-11"
        >
          <span
            class="PrivateValueLabel-label-12"
          >
            10
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have two handles 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root WithStyles(ForwardRef(Slider))-root-13 MuiSlider-colorPrimary"
  >
    <span
      class="MuiSlider-rail WithStyles(ForwardRef(Slider))-rail-19"
    />
    <span
      class="MuiSlider-track WithStyles(ForwardRef(Slider))-track-18"
      style="left: 10%; width: 20%;"
    />
    <input
      type="hidden"
      value="10,30"
    />
    <span
      aria-label="0"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="10"
      aria-valuetext="10"
      class="MuiSlider-thumb WithStyles(ForwardRef(Slider))-thumb-14 MuiSlider-thumbColorPrimary PrivateValueLabel-thumb-20"
      data-index="0"
      role="slider"
      style="left: 10%;"
      tabindex="0"
    >
      <span
        class="PrivateValueLabel-offset-22 MuiSlider-valueLabel WithStyles(ForwardRef(Slider))-valueLabel-15"
      >
        <span
          class="PrivateValueLabel-circle-23"
        >
          <span
            class="PrivateValueLabel-label-24"
          >
            10
          </span>
        </span>
      </span>
    </span>
    <span
      aria-label="1"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      aria-valuetext="30"
      class="MuiSlider-thumb WithStyles(ForwardRef(Slider))-thumb-14 MuiSlider-thumbColorPrimary PrivateValueLabel-thumb-20"
      data-index="1"
      role="slider"
      style="left: 30%;"
      tabindex="0"
    >
      <span
        class="PrivateValueLabel-offset-22 MuiSlider-valueLabel WithStyles(ForwardRef(Slider))-valueLabel-15"
      >
        <span
          class="PrivateValueLabel-circle-23"
        >
          <span
            class="PrivateValueLabel-label-24"
          >
            30
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;
